@@ -1,0 +1,3 @@
+<P>
+Aucun fichier ne peut être enregistré sur le serveur car ils auraient tous écrasé des fichiers existants. Vous n'avez pas cette autorisation.
+</P>
