@@ -1,4 +1,4 @@
-co: name={NoFilesUploadedBecauseOverwriteLockedFiles} description={} changed={2014-02-11 00:47:52 CET} changedby={ec} visualorder={0} guid={12EAEC2DE9BDD92B} parentguid={} typeguid={E6AFEA202AFB4911} id={} parentid={} typeid={}
-val: guid={12EAEC472617653B} datatype={} isdefault={false} langid={de} description={} validfrom={2011-03-13 11:29:07 CET} validto={} changed={2013-03-25 14:47:25 CET} changedby={ec} properties={} id={}
-val: guid={12EAEC472AF23DC1} datatype={} isdefault={false} langid={fr} description={} validfrom={2011-03-13 11:29:04 CET} validto={} changed={2012-11-14 20:45:33 CET} changedby={ec} properties={} id={}
-val: guid={12EAEC4728FED429} datatype={} isdefault={true} langid={en} description={} validfrom={2011-03-13 11:29:01 CET} validto={} changed={2014-02-11 00:47:52 CET} changedby={ec} properties={} id={}
+co: name={NoFilesUploadedBecauseOverwriteLockedFiles} description={} changed={2016-05-04 15:19:31 CEST} changedby={ec} visualorder={0} guid={12EAEC2DE9BDD92B} parentguid={} typeguid={E6AFEA202AFB4911} id={} parentid={} typeid={}
+val: guid={12EAEC472617653B} datatype={} isdefault={false} langid={de} description={} validfrom={2011-03-13 11:29:07 CET} validto={} changed={2016-05-04 15:19:31 CEST} changedby={ec} properties={} id={}
+val: guid={12EAEC472AF23DC1} datatype={} isdefault={false} langid={fr} description={} validfrom={2011-03-13 11:29:04 CET} validto={} changed={2016-05-04 15:15:08 CEST} changedby={ec} properties={} id={}
+val: guid={12EAEC4728FED429} datatype={} isdefault={true} langid={en} description={} validfrom={2011-03-13 11:29:01 CET} validto={} changed={2016-05-04 15:15:09 CEST} changedby={ec} properties={} id={}
