@@ -1,0 +1,3 @@
+<P>
+Certains fichiers ne peuvent être enregistrés sur le serveur car ils auraient remplacé des fichiers sans que vous ayez cette autorisation.
+</P>
