@@ -1,0 +1,6 @@
+<P>
+Folgenden Dateien existieren bereits und sie haben nicht die Berechtigung sie zu überschreiben. Sie werden nicht hochgeladen: [NAME]
+</P>
+<P>
+Bitte ändern Sie die Dateinnamen auf Ihrem Computer und laden Sie die Dateien erneut hoch.
+</P>
